force-app/main/default/objects/Chatbase_Config__mdt/Chatbase_Config__mdt.object-meta.xml
<CustomObject>
    <label>F2FApp_Config</label>
    <pluralLabel>Chatbase_Configs</pluralLabel>
</CustomObject>