force-app/main/default/objects/Chatbase_Config__mdt/fields/ApiKey__c.field-meta.xml
<CustomField>
    <fullName>ApiKey__c</fullName>
    <label>ChatbotApiKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>