force-app/main/default/objects/Chatbase_Config__mdt/fields/ApiPath__c.field-meta.xml
<CustomField>
    <fullName>ApiPath__c</fullName>
    <label>ChatbotApiPath</label>
    <length>255</length>
    <type>Text</type>
</CustomField>