force-app/main/default/objects/Chatbase_Config__mdt/fields/ChatbotId__c.field-meta.xml
<CustomField>
    <fullName>ChatbotId__c</fullName>
    <label>ChatbotId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>