force-app/main/default/objects/Chatbase_Config__mdt/fields/ChatbotSecret__c.field-meta.xml
<CustomField>
    <fullName>ChatbotSecret__c</fullName>
    <label>ChatbotSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>