force-app/main/default/objects/Chatbase_Config__mdt/fields/PendoApiKey__c.field-meta.xml
<CustomField>
    <fullName>PendoApiKey__c</fullName>
    <label>PendoApiKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>